{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 56,
  "lineage": "b3f46889-039c-89ea-3fdf-4ff3c1219f71",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b604672a5af7fda",
            "association_id": "eipassoc-0fb4b98e6a16a0121",
            "domain": "vpc",
            "id": "eipalloc-07b604672a5af7fda",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05e5b970bafbdfd0c",
            "private_dns": "ip-10-0-77-165.ec2.internal",
            "private_ip": "10.0.77.165",
            "public_dns": "ec2-54-144-34-176.compute-1.amazonaws.com",
            "public_ip": "54.144.34.176",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat rawat-jalan"
            },
            "tags_all": {
              "Name": "nat rawat-jalan"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446010526809:internet-gateway/igw-03e5b4bc91a62db4b",
            "id": "igw-03e5b4bc91a62db4b",
            "owner_id": "446010526809",
            "tags": {
              "Name": "igw rawat-jalan"
            },
            "tags_all": {
              "Name": "igw rawat-jalan"
            },
            "vpc_id": "vpc-034b4013bc433de68"
          },
          "dependencies": [
            "aws_vpc.rawat-jalan"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "rawat-jalan",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:446010526809:loadbalancer/net/rawat-jalan/ef1eca3c305f9df1",
            "arn_suffix": "net/rawat-jalan/ef1eca3c305f9df1",
            "dns_name": "rawat-jalan-ef1eca3c305f9df1.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:446010526809:loadbalancer/net/rawat-jalan/ef1eca3c305f9df1",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "rawat-jalan",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0db853ad519c7d9b8"
              },
              {
                "subnet_id": "subnet-0e37fb20442262e2a"
              }
            ],
            "subnets": [
              "subnet-0db853ad519c7d9b8",
              "subnet-0e37fb20442262e2a"
            ],
            "vpc_id": "vpc-034b4013bc433de68",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_subnet.private-us-east-1a",
            "aws_subnet.private-us-east-1b",
            "aws_vpc.rawat-jalan"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rawat-jalan",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:446010526809:listener/net/rawat-jalan/ef1eca3c305f9df1/abd4a8b2bd5bf5f0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:446010526809:targetgroup/rawat-jalan/da2c0d16ae6092d7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:446010526809:listener/net/rawat-jalan/ef1eca3c305f9df1/abd4a8b2bd5bf5f0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:446010526809:loadbalancer/net/rawat-jalan/ef1eca3c305f9df1",
            "port": 8080,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.rawat-jalan",
            "aws_lb_target_group.rawat-jalan",
            "aws_subnet.private-us-east-1a",
            "aws_subnet.private-us-east-1b",
            "aws_vpc.rawat-jalan"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rawat-jalan",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:446010526809:targetgroup/rawat-jalan/da2c0d16ae6092d7",
            "arn_suffix": "targetgroup/rawat-jalan/da2c0d16ae6092d7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:446010526809:targetgroup/rawat-jalan/da2c0d16ae6092d7",
            "lambda_multi_value_headers_enabled": false,
            "name": "rawat-jalan",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-034b4013bc433de68"
          },
          "dependencies": [
            "aws_vpc.rawat-jalan"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b604672a5af7fda",
            "connectivity_type": "public",
            "id": "nat-0ae0df9aa62b4e941",
            "network_interface_id": "eni-05e5b970bafbdfd0c",
            "private_ip": "10.0.77.165",
            "public_ip": "54.144.34.176",
            "subnet_id": "subnet-0a64ad0e502326371",
            "tags": {
              "Name": "nat rawat-jalan"
            },
            "tags_all": {
              "Name": "nat rawat-jalan"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.rawat-jalan"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446010526809:route-table/rtb-0504f84a914d105a0",
            "id": "rtb-0504f84a914d105a0",
            "owner_id": "446010526809",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ae0df9aa62b4e941",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-034b4013bc433de68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.rawat-jalan"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446010526809:route-table/rtb-060bd8d47b793380a",
            "id": "rtb-060bd8d47b793380a",
            "owner_id": "446010526809",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03e5b4bc91a62db4b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-034b4013bc433de68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.rawat-jalan"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df59003f612cc754",
            "route_table_id": "rtb-0504f84a914d105a0",
            "subnet_id": "subnet-0e37fb20442262e2a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-us-east-1a",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.rawat-jalan"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066a296ffa92f5cfe",
            "route_table_id": "rtb-0504f84a914d105a0",
            "subnet_id": "subnet-0db853ad519c7d9b8"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-us-east-1b",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.rawat-jalan"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e784de0d342352ae",
            "route_table_id": "rtb-060bd8d47b793380a",
            "subnet_id": "subnet-0a64ad0e502326371"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.rawat-jalan"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ca0b4f217f48e9d",
            "route_table_id": "rtb-060bd8d47b793380a",
            "subnet_id": "subnet-064ce496d403a2b52"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-1b",
            "aws_vpc.rawat-jalan"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rawat-jalan",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446010526809:security-group/sg-052f545f4cb4ce4c0",
            "description": "Allow API Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052f545f4cb4ce4c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow Health Checks",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3306
              }
            ],
            "name": "rawat-jalan",
            "name_prefix": "",
            "owner_id": "446010526809",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-034b4013bc433de68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rawat-jalan"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446010526809:subnet/subnet-0e37fb20442262e2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e37fb20442262e2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "446010526809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a rawat-jalan"
            },
            "tags_all": {
              "Name": "private-us-east-1a rawat-jalan"
            },
            "vpc_id": "vpc-034b4013bc433de68"
          },
          "dependencies": [
            "aws_vpc.rawat-jalan"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446010526809:subnet/subnet-0db853ad519c7d9b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db853ad519c7d9b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "446010526809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b rawat-jalan"
            },
            "tags_all": {
              "Name": "private-us-east-1b rawat-jalan"
            },
            "vpc_id": "vpc-034b4013bc433de68"
          },
          "dependencies": [
            "aws_vpc.rawat-jalan"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446010526809:subnet/subnet-0a64ad0e502326371",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a64ad0e502326371",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "446010526809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a rawat-jalan"
            },
            "tags_all": {
              "Name": "public-us-east-1a rawat-jalan"
            },
            "vpc_id": "vpc-034b4013bc433de68"
          },
          "dependencies": [
            "aws_vpc.rawat-jalan"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446010526809:subnet/subnet-064ce496d403a2b52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064ce496d403a2b52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "446010526809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b rawat-jalan"
            },
            "tags_all": {
              "Name": "public-us-east-1b rawat-jalan"
            },
            "vpc_id": "vpc-034b4013bc433de68"
          },
          "dependencies": [
            "aws_vpc.rawat-jalan"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rawat-jalan",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446010526809:vpc/vpc-034b4013bc433de68",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0433d0f700d6c62a2",
            "default_route_table_id": "rtb-036ecacb879e6e6b4",
            "default_security_group_id": "sg-020c56dd22be6f193",
            "dhcp_options_id": "dopt-0af4d0897b1b5640c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-034b4013bc433de68",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-036ecacb879e6e6b4",
            "owner_id": "446010526809",
            "tags": {
              "Name": "vpc rawat-jalan"
            },
            "tags_all": {
              "Name": "vpc rawat-jalan"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}